# petekio

./: .gitignore  .readthedocs.yaml  API.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  SPEC.md  mkdocs.yml  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.claude/skills/add-todo/: SKILL.md
.claude/skills/dev-docs-cleanup/: SKILL.md
.claude/skills/notify/: SKILL.md
.claude/skills/phased-plan/: SKILL.md
.claude/skills/read-inbox/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: gridding.rs  petro_hotpath.rs  strat_order.rs
docs/: guide.md  index.md  install.md  requirements.txt
docs/api/: reference.md
docs/guide/: geodata.md  persistence.md  project-workspace.md  surfaces.md  wells.md
examples/: 01_surfaces.ipynb  02_wells.ipynb  README.md  project_workspace.py  synthgen.py  well_example.ipynb
examples/data/: scatter_points.csv
py/: Cargo.toml
py/src/: attribute.rs  detect.rs  geodata.rs  geometry.rs  intersection.rs  lib.rs  points.rs  shell.rs  specs.rs  stats.rs  structured_surface.rs  surface.rs  trajectory.rs  tri_surface.rs  viewer.rs  well.rs
python/petekio/: __init__.py  _logs.py  _project.py  _project_view.py  _project_view_catalog.py  _project_view_curves.py  _project_view_surface.py  _specs.py  _viewer.py
python/tests/: test_boundary.py  test_log_expressions.py  test_petekio.py  test_petro_access.py  test_project.py  test_project_view.py  test_shells.py  test_spec_conformance.py  test_synthgen.py  test_well_intersections.py  test_wells_view.py
src/: lib.rs
src/algorithms/: intersections.rs  mod.rs  surfaces.rs  wells.rs
src/analysis/: characterise.rs  interpret.rs  mod.rs  model_inputs.rs  normalize.rs  validate.rs  well_tables.rs
src/core/: attribute.rs  gridding.rs  intersection.rs  log.rs  mod.rs  persist.rs  points.rs  polygons.rs  structured_surface.rs  surface.rs  surface_convert.rs  surface_filter.rs  surface_ops.rs  surface_stats.rs  topology.rs  tops.rs  trajectory.rs  tri_surface.rs  value_layer.rs  well.rs
src/core/shell/: corner.rs  fit.rs  mesh.rs  mod.rs  structured.rs
src/foundation/: error.rs  geometry.rs  history.rs  mod.rs  stats.rs  uncertain.rs  units.rs
src/io/: container.rs  cps3.rs  crsmeta.rs  csv_points.rs  detect.rs  earthvision.rs  irap.rs  las.rs  log_data.rs  mod.rs  petrel_tops.rs  point_data.rs  polygon_data.rs  serial.rs  surface_data.rs  tops.rs  vector.rs  vector_write.rs  wellpath.rs  xyz.rs
src/manager/: geodata.rs  loaders.rs  mod.rs  model_inputs.rs  project.rs  wells_view.rs
tests/: curve_aliases.rs  detect.rs  geodata.rs  grid_orientation.rs  irap_roundtrip.rs  las3_core.rs  lithostrat_order.rs  logs_tops.rs  model_inputs.rs  multibore_well.rs  points_polygons.rs  project_persistence.rs  real_readers.rs  single_deviated_well.rs  strat_hints.rs  trajectory_survey.rs  well_object_organization.rs  well_surface_intersections.rs
tests/common/: mod.rs
tests/fixtures/: points.geojson  points.xyz  sample.las  square.geojson  square.pol  tops.csv
tests/fixtures/wells_multibore/: CerisaTops_like.tops
tests/fixtures/wells_multibore/36_7-X/: 36_7-X A Cerisa_full_core.las  36_7-X_A.wellpath  36_7-X_A_CompLogs.las  36_7-X_ST2.wellpath  36_7-X_ST2_CompLogs.las
