[workspace]
members = ["py"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/kkollsga/petekio-next"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]

[package]
name = "petekio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Subsurface data ingestion + structure layer: surfaces, wells, points, polygons with loading, interpolation, and statistics."
readme = "README.md"
keywords = ["subsurface", "geoscience", "geology", "seismic", "irap"]
categories = ["science", "parsing"]
# Keep the published crate lean — the Python wheel sources + CI live in the repo
# but aren't part of the Rust library. (Workspace member `py/` is auto-excluded.)
# Keep the published crate lean and ship NO test/example data: tests/ (golden
# fixtures) and examples/ (notebooks + sample data) aren't part of the library a
# downstream user consumes. (benches/ stays — a declared [[bench]] target.)
exclude = [
    "/python", "/pyproject.toml", "/.github", "/.cargo", "/dist", "/.claude",
    "/CLAUDE.md", "/tests", "/examples",
    "/docs", "/mkdocs.yml", "/.readthedocs.yaml", "/site",
]

[dependencies]
thiserror = "2"
ndarray = { version = "0.17", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
las_rs = "0.2.1"
csv = "1"
geo = { version = "0.33", features = ["use-serde"] }
geozero = { version = "0.15", features = ["with-geo", "with-geojson", "with-wkt", "with-shp"] }
rstar = "0.13"
# Persistence (.pproj): serde DTOs + bincode sections layered on petekTools'
# generic container (which owns the magic/JSON-header/zstd framing).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
# Shared numeric kernels + generic `.pproj` container. Registry pin for publish;
# the workspace-level `[patch.crates-io]` below redirects it to the sibling
# working tree for LOCAL dev builds (dev-only, stripped from the published crate —
# see the patch note). One `petektools` in the lockfile either way.
petektools = "0.2.0"

[features]
default = []
# f32 storage typedef for memory-bound large surfaces (SPEC "Storage
# precision"). Wiring deferred — API.md locks `Array2<f64>` for now.
f32 = []

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "gridding"
harness = false

[[bench]]
name = "strat_order"
harness = false

[[bench]]
name = "petro_hotpath"
harness = false

# --- DEV-ONLY: local family builds ------------------------------------------
# The `petektools` dependency above is a crates.io registry pin (for publish).
# This patch redirects it to the sibling working tree so local/CI dev builds
# compile against petekTools HEAD (and there is exactly ONE `petektools` in the
# lockfile). `[patch]` sections are a WORKSPACE-ROOT concern: cargo strips them
# from the published `Cargo.toml`, and a downstream consumer of the published
# `petekio` crate never sees this — it resolves `petektools = "0.2.0"` from
# crates.io. Harmless in the published artifact; remove only if the sibling
# checkout goes away. (Verified: `cargo publish --dry-run` packages the pinned
# dependency, not the patched path.)
[patch.crates-io]
petektools = { path = "../petekTools" }
