[workspace]
members = ["py"]

[workspace.package]
version = "0.3.13"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/kkollsga/petekio"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]

[package]
name = "petekio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Subsurface data ingestion + structure layer: surfaces, wells, points, polygons with loading, interpolation, and statistics."
readme = "README.md"
keywords = ["subsurface", "geoscience", "geology", "seismic", "irap"]
categories = ["science", "parsing"]
# Keep the published crate lean — the Python wheel sources + CI live in the repo
# but aren't part of the Rust library. (Workspace member `py/` is auto-excluded.)
# Keep the published crate lean and ship NO test/example data: tests/ (golden
# fixtures) and examples/ (notebooks + sample data) aren't part of the library a
# downstream user consumes. (benches/ stays — a declared [[bench]] target.)
exclude = [
    "/python", "/pyproject.toml", "/.github", "/.cargo", "/dist", "/.claude",
    "/CLAUDE.md", "/tests", "/examples",
    "/docs", "/mkdocs.yml", "/.readthedocs.yaml", "/site",
]

[dependencies]
thiserror = "2"
ndarray = { version = "0.17", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
las_rs = "0.2.1"
csv = "1"
geo = { version = "0.33", features = ["use-serde"] }
geozero = { version = "0.15", features = ["with-geo", "with-geojson", "with-wkt", "with-shp"] }
rstar = "0.13"
# Delaunay for the TIN fallback. Already in the tree transitively via `geo`, so
# depending on it directly adds zero crates.
spade = "2.15"
# Persistence (.pproj): serde DTOs + bincode sections layered on petekTools'
# generic container (which owns the magic/JSON-header/zstd framing).
# "rc": Arc-shared geometry shells serialize as their inner data (each surface
# section stores its shell once; lanes reference the in-memory shell via Arc).
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
bincode = "1"
# Shared numeric kernels + generic `.pproj` container. Resolved from crates.io
# (the family is published; the dev-only [patch.crates-io] was removed at launch).
petektools = "0.2.7"

[features]
default = []
# f32 storage typedef for memory-bound large surfaces (SPEC "Storage
# precision"). Wiring deferred — API.md locks `Array2<f64>` for now.
f32 = []

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "gridding"
harness = false

[[bench]]
name = "strat_order"
harness = false

[[bench]]
name = "petro_hotpath"
harness = false
